--- a/codes2.0/rest-api/config.yml
+++ b/codes2.0/rest-api/config.yml
@@ -5,3 +5,9 @@ listen:
   type: port
   bind_ip: 0.0.0.0
   port: 10000
+storage:
+  host: localhost
+  port: 5432
+  database: serpc
+  username: serpc
+  password: '12345'
